30 April 2011: dht-0.19

  * Fix incorrect parsing of announces.  Thanks to cjdelisle.
  * Relax rate limiting slightly.

20 January 2011: dht-0.18

  * Fix a bug that could cause parse_message to enter an infinite loop
    on overflow.  Thanks to Jordan Lee.

9 January 2011: dht-0.17:

  * Fix a bug that prevented calling dht_init after dht_uninit.
  * Remove the "dofree" parameter to dht_uninit.

23 December 2010: dht-0.16:

  * Change the interface to allow sharing of the UDP socket e.g. with uTP.

1 July 2010: dht-0.15

  * Port to Windows, for the needs of Transmission.

25 March 2010: dht-0.14

  * Fixed ordering of entries in parameter dictionaries.

15 December 2009: dht-0.13

  * Implemented protection against incorrect addresses in the DHT.
  * Tweaked neighborhood maintenance to wake up less often.

11 December 2009: dht-0.12
  * Fixed slightly incorrect formatting of DHT messages.
  * Fixed incorrect debugging message.

22 November 2009: dht-0.11

  * Implemented IPv6 support (BEP-32).
  * Fixed a bug which could cause us to never mark a search as finished.
  * Fixed a bug that could cause us to send incomplete lists in response to
    find_nodes.
  * Limit the number of hashes that we're willing to track.
  * Made bucket maintenance slightly more aggressive.
  * Produce on-the-wire error messages to give a hint to the other side.
  * Added a bunch of options to dht-example to make it useful as
    a bootstrap node.
  * Send version "JC\0\0" when using dht-example.

18 October 2009: dht-0.10

  * Send nodes even when sending values.  This is a violation of the
    protocol, but I have been assured that it doesn't break any deployed
    implementation.  This is also what both libtorrent and uTorrent do.
  * Give up immediately on a search peer when no token was provided.  This
    is a very reasonable extension to the protocol, and certainly doesn't
    break anything.
  * Parse heterogeneous values lists correctly.  This is mandated by BEP 32.
